src/skottie_bindings.rs

/* automatically generated by rust-bindgen 0.55.1 */

use crate::core_bindings::ShadeCanvas;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ShadeSkottieAnimation {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct ShadeSkottieAnimationProps {
    pub duration: f64,
    pub fps: f64,
    pub width: i32,
    pub height: i32,
}
extern "C" {
    pub fn shade_skottie_animation_create(
        data: *const ::std::os::raw::c_char,
        data_size: usize,
        props: *mut ShadeSkottieAnimationProps,
    ) -> *mut ShadeSkottieAnimation;
}
extern "C" {
    pub fn shade_skottie_animation_destroy(animation: *mut ShadeSkottieAnimation);
}
extern "C" {
    pub fn shade_skottie_animation_render(
        animation: *mut ShadeSkottieAnimation,
        canvas: *mut ShadeCanvas,
        rect: *const f32,
    );
}
extern "C" {
    pub fn shade_skottie_animation_seek_frame(animation: *mut ShadeSkottieAnimation, t: f64);
}
extern "C" {
    pub fn shade_skottie_animation_seek_frame_time(animation: *mut ShadeSkottieAnimation, t: f64);
}
